// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render ExpenseSummary with Single Total 1`] = `
<div>
  <h3>
     Viewing 
    1
     
    expense
     totaling 
    $5.50
  </h3>
</div>
`;

exports[`Render ExpenseSummary with multiple Total 1`] = `
<div>
  <h3>
     Viewing 
    6
     
    expenses
     totaling 
    $325.50
  </h3>
</div>
`;
